--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,10 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     open-in-view: true
     properties:
       hibernate:
         enable_lazy_load_no_trans: true
+logging:
+  file: ./logs/demo.log
